drone-agent-deployment-gke.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: 2018-10-06T21:23:34Z
  generation: 4
  labels:
    app: drone
    chart: drone-1.7.0
    component: agent
    heritage: Tiller
    release: mydrone
  name: mydrone-drone-agent
  namespace: drone
  resourceVersion: "43020"
  selfLink: /apis/extensions/v1beta1/namespaces/drone/deployments/mydrone-drone-agent
  uid: 14dfcb64-c9ae-11e8-aced-42010a80021f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
      component: agent
      release: mydrone
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/secrets: bdfe45c321d35d01a8f435059e29e83faa76c59883b2d6215b78fe796865fd94
      creationTimestamp: null
      labels:
        app: drone
        component: agent
        release: mydrone
    spec:
      containers:
      - env:
        - name: DRONE_SERVER
          value: mydrone-drone:9000
        - name: DRONE_SECRET
          valueFrom:
            secretKeyRef:
              key: secret
              name: mydrone-drone
        - name: DOCKER_HOST
          value: tcp://localhost:2375
        - name: DRONE_DEBUG
          value: "false"
        image: docker.io/drone/agent:0.8.6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: mydrone-drone-agent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - env:
        - name: DOCKER_DRIVER
          value: overlay2
        image: docker.io/library/docker:18.06.1-ce-dind
        imagePullPolicy: IfNotPresent
        name: mydrone-drone-dind
        resources: {}
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/docker
          name: docker-graph-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: mydrone-drone
      serviceAccountName: mydrone-drone
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: docker-graph-storage
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-10-06T21:23:34Z
    lastUpdateTime: 2018-10-06T21:23:34Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
