ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jolly-moose-drone-ingress
spec:
  backend:
    serviceName: jolly-moose-drone
    servicePort: 80
